--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 1rem;
+    height: 1rem;
+    padding: 10px 0;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: rgb(255, 255, 255);
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: rgb(214, 214, 214);
+    border-radius: 100vh;
+    border: none;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: rgb(199, 199, 199);
+  }
+
+  .scrollbar::-webkit-scrollbar-button:end {
+    height: 1.5rem;
+  }
+
+  .scrollbar::-webkit-scrollbar-button:start {
+    height: 1.5rem;
+  }
+
+  .box-shadow {
+    position: relative;
+  }
+
+  .box-shadow::before {
+    pointer-events: none;
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: inset 0px -1px 35px 10px white;
+    -moz-box-shadow: inset 0px -1px 35px 10px white;
+    box-shadow: inset 0px -1px 35px 10px white;
+  }
+}
